--- a/src/components/_banner.scss
+++ b/src/components/_banner.scss
@@ -1,15 +1,89 @@
 @use '../styles/' as s;
 
 
+
 .main{
     height: 50vh; //fallback options
-    height: calc(var(--vh, 1vh)* 50);
+    height: calc(var(--vh, 1vh) * 58);
     background-color: s.$white;
-    .container{
-        .row{
+    .row{
+        flex-direction: column;
+        justify-content: center;
+        h2{
+            font-size: 3rem;
+            line-height: 4.2rem;
+             font-weight: 700;
+             z-index: 10;
+             flex-direction: column;
+            justify-content: center;
+           color: s.$white;
+           mix-blend-mode: difference;
+           @include s.media('<=tablet'){
+            font-size: 2.4rem;
+            line-height: 3rem;
+           }
+           @include s.media('<=phone'){
+            font-size: 1.7rem;
+            line-height: 3rem;
+            margin-top: 72px;
+           } 
             .line{
-                span{
-
+                margin-bottom: 8px;
+                height: 56px;
+                position: relative;
+                overflow: hidden;
+                @include s.media('<=tablet'){
+                   height: 48px;
+                   }
+                   @include s.media('<=phone'){
+                    height: 32px;
+                   }
+                   span{
+                    position: absolute;
+                   }
+            }
+          
+        }
+        .btn-row{
+            width: 256px;
+            position: relative;
+            z-index: 2;
+            a{
+                display: flex;
+                font-size: 1.6rem;
+                color: s.$black;
+                text-decoration: none;
+                 font-weight: 600;
+                 align-items: center;
+                 @include s.media('<=tablet'){
+                    font-size: 1.3rem;
+                    }
+                    @include s.media('<=phone'){
+                        font-size: 1.1rem;
+                    }
+                svg{
+                    margin-left: 16px;
+                    border: 2px solid s.$black;
+                    padding: 12px;
+                    height: 24px;
+                    border-radius: 100px;
+                    transition: .4s ease-in-out;
+                    @include s.media('<=tablet'){
+                        padding: 6px;
+                        width: 20px;
+                        height: 20px;
+                        }
+                        @include s.media('<=phone'){
+                            padding: 6px;
+                            width: 16px;
+                            height: 16px;
+                        }
+                }
+                &:hover{
+                    svg{
+                        background-color: s.$black;
+                        color: s.$white;
+                    }
                 }
             }
         }
