--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -2,7 +2,8 @@
 .header{
     position: fixed;
     width: 100%;
-    height: 120px;
+    height: 128px;
+    z-index: 4;
   
     .logo{
         a{
