--- a/src/components/navigation.scss
+++ b/src/components/navigation.scss
@@ -1,116 +1,129 @@
 @use '../styles/' as s;
 @use '../styles' as *;
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700&display=swap");
-
-nav{
-    width: 100vw;
-    height: 100vh;
-    top: -1px;
-    position: fixed;
-    background-color: s.$yellow;
-    z-index: 1;
-    overflow: hidden;
+nav {
     left: 0;
-  
-    // display: none;
-
-    a{
-        position: relative;
-        &:after{
-            content:"";
-            height: 2px;
-            margin-top: 5px;
-            right: 0;
-            width: 0;
-            display: block;
-            position: absolute;
-            background: s.$black;
-            transition: 0.4s ease;
-            &:hover{
-                &:after{
-                    left: 0;
-                    width: 100%;
-                    background-color: s.$black;
-                }
-            }
+    top: -1px;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: none;
+    position: fixed;
+    overflow: hidden;
+    background: $yellow;
+    a {
+      position: relative;
+      &:after {
+        content: "";
+        position: absolute;
+        width: 0;
+        height: 2px;
+        display: block;
+        margin-top: 5px;
+        right: 0;
+        background: $black;
+        transition: 0.4s ease;
+      }
+      &:hover {
+        color: pink;
+        &:after {
+          width: 100%;
+          left: 0;
+          background: $black;
         }
+      }
     }
-    .nav-columns{
-        transform: translateY(125px);
-       display: flex;
-       padding: 0 32px;
-
-        .nav-column{
-            width: 45%;
-            & :last-child{
-                width: 55%;
-                @include media('<=654px'){
-                    width: 100%;
-                }
+    .nav-columns {
+      transform: translateY(125px);
+      display: flex;
+      padding: 0 32px;
+      @include media("<=654px") {
+        flex-direction: column;
+        @include media("<=phone") {
+          padding: 0 16px;
+        }
+      }
+      .nav-column {
+        width: 45%;
+        @include media("<=654px") {
+          width: 100%;
+        }
+        &:last-child {
+          width: 55%;
+          @include media("<=654px") {
+            width: 100%;
+          }
+        }
+        .nav-label {
+          margin-bottom: 3rem;
+          font-size: 1.2rem;
+          @include media("<=tablet") {
+            font-size: 1rem;
+            margin-bottom: 1.4rem;
+          }
+          @include media("<=phone") {
+            font-size: 0.875rem;
+            margin-bottom: 1.2rem;
+          }
+        }
+        .nav-infos {
+          display: flex;
+          flex-wrap: wrap;
+          @include media("<=654px") {
+            justify-content: space-between;
+          }
+          .nav-info {
+            padding: 0;
+            width: 50%;
+            &:nth-child(2),
+            &:nth-child(3) {
+              @include media("<=654px") {
+                display: none;
+              }
             }
-            .nav-label{
-                margin-bottom: 3rem;
+            .nav-info-label {
+              font-weight: 600;
+            }
+            li {
+              font-weight: 300;
+              list-style: none;
+              font-size: 1.4rem;
+              margin-bottom: 1.2rem;
+              @include media("<=tablet") {
                 font-size: 1.2rem;
-                @include media('<=tablet'){
-                    font-size: 1rem;
-                    margin-bottom: 3.4rem;
-                }
-                @include media('<=phone'){
-                    font-size: 0.075rem;
-                    margin-bottom: 1.2rem;
-                }
+                margin-bottom: 1rem;
+              }
+              @include media("<=phone") {
+                font-size: 1rem;
+                margin-bottom: 0.875rem;
+              }
+              a {
+                text-decoration: none;
+                color: $black;
+              }
             }
-                .nav-link{
-                    padding: 0;
-                    margin: 0;
-                    li{
-                        list-style: none;
-                        margin-bottom: 2.8rem;
-                        @include media('<=phone'){
-                            margin-bottom: 1.6rem;
-                        }
-                        a{
-                            text-decoration: none;
-                            color: black;
-                            font-size: 2rem;
-                        }
-                    }
-                 
-                }
-
-
-                .nav-infos{
-                    display: flex;
-                    flex-wrap: wrap;
-                    @include media('<=654px'){
-                    justify-content: space-between;
-                  }
-                   
-                    .nav-info{
-                        padding: 0;
-                        width: 50%;
-                        
-                        &:nth-child(2), :nth-child(3){
-                            @include media('<=654px'){
-                               display: none;
-                              }
-                        }
-                        .nav-info-label{
-                            font-weight: 600;
-                        }
-                        li{
-                            list-style: none;
-                            font-weight:  300;
-                            margin-bottom: 1.2rem;
-                            font-size: 1.4;
-                            a{
-                                text-decoration: none;
-                                color: black;
-                            }
-                        }
-                    }
-                }
-            
+          }
         }
+        .nav-links {
+          padding: 0;
+          margin: 0;
+          li {
+            list-style: none;
+            margin-bottom: 2.4rem;
+            @include media("<=phone") {
+              margin-bottom: 1.6rem;
+            }
+            a {
+              font-weight: 600;
+              font-size: 2.8rem;
+              text-decoration: none;
+              color: $black;
+              @include media("<=phone") {
+                font-size: 2rem;
+              }
+            }
+          }
+        }
+      }
     }
-}
+  }
