--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -3,7 +3,7 @@
     position: fixed;
     width: 100%;
     height: 128px;
-    z-index: 4;
+    z-index: 14;
     @include s.media("<=phone") {
       height: 96px;
     }
@@ -46,7 +46,7 @@
       }
       .hamburger-menu-close {
         position: absolute;
-        display: none;
+        display: block;
   
         svg {
           @include s.media("<=tablet") {
